# qlover

./: Cargo.toml  Justfile  flake.nix  rust-toolchain.toml
src/: engine.rs  input.rs  lib.rs  main.rs  model.rs  output.rs  platform.rs  stroke.rs
src/input/: plover_hid.rs
src/model/: dictionary.rs  stroke.rs  translation.rs
src/model/dictionary/: test.rs
src/model/stroke/: test.rs
src/model/translation/: test.rs
src/output/: x11.rs
src/platform/: x11.rs
