[package]
name = "qlover"
version = "0.1.0"
edition = "2024"

[features]
default = ["x11"]
x11 = ["dep:x11rb"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = "2.13.0"
env_logger = "0.11.10"
hidapi = "2.6.6"
log = "0.4.29"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.12"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.2", optional = true, features = ["xtest"] }

[dev-dependencies]
proptest = "1.11.0"
test-strategy = "0.4.5"
